--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
  
  <h2 id="soc">CONNECT WITH ME</h2>
 
- <p align="center" id="sdd">I'm socially active for my  customers everytime </br>You can DM us anytime socially</br>You are always welcome </p>
+ <p syle=text-align:centerid="sdd">I'm socially active for my  customers everytime </br>You can DM us anytime socially</br>You are always welcome </p>
 
 <nav><center>
 	<a href=""><img id="limg" src="images\insta.png" height="30px" width="30px" alt="insta logo here"></a>
