--- a/contact.html
+++ b/contact.html
@@ -17,8 +17,13 @@
 	</head>
 	
 	<body>
+		<style>
+			body{
+				background-color: #c8dde2a2;
+			}
+		</style>
 		<div>
-			<a href="index.html"><img id="img" src="images\insta.png" height="150px" class="center" alt="Logo Here"></a>
+			<a href="index.html"><img id="img" src="photo.jpg" height="300px" class="center" alt="Logo Here"></a>
 			<h5 id="sin" align="center">S  i  n  c  e   2  0  2  1 </h5>
 			<div id="fc">UWASE CHIRWA BAD'LHA BIOCHEMICAL LABORATORY</div> 
 		</div>
@@ -41,12 +46,12 @@
 			<h1>Phone Number : +243 977603124<br><br>
 				Email-id : uwasechirwa@gmail.com</h1>
 		
-		<h1 style=color:red>I am social and active for my customers everytime. You can DM us anytime</br>You are always welcome !!<br><br> For latest updates <br>FOLLOW US ON ! </h1>
+		<h1 style=color:rgb(231, 167, 28)>I am social and active for my customers everytime. You can DM us anytime</br>You are always welcome !!<br><br> For latest updates <br>FOLLOW US ON ! </h1>
 		</div>
 		<nav><center>
-			<a href=""><img id="limg" src="images\insta.png" height="30px" width="30px" alt="insta logo here"></a>
-			<a href=""><img id="limg" src="images\fb.png" height="30px" width="30px" alt="facebook logo here"></a>
-			<a href=""><img id="limg" src="images\gmail.png" height="30px" width="30px" alt="gmail logo here"></a>
+			<a href=""><img id="limg" src="photo.jpg" height="30px" width="30px" alt="insta logo here"></a>
+			<a href=""><img id="limg" src="fb.png" height="30px" width="30px" alt="facebook logo here"></a>
+			<a href=""><img id="limg" src="gmail.png" height="30px" width="30px" alt="gmail logo here"></a>
 		</nav></center>
 		
 	</style>
