--- a/products.html
+++ b/products.html
@@ -18,20 +18,28 @@
 	</head>
 	
 	<body>
+		<style>
+			body{
+				background-color: #c8dde2a2;
+			}
+		</style>
+		
+		
+		</sryle>
 		<div>
-			<a href="index.html"><img id="img" src="images\insta.png" height="150px" class="center" alt="Logo Here"></a>
-			<h5 id="sin" align="center">S  i  n  c  e   2  0  2  1  </h5>
+			<a href="index.html"><img id="img" src="photo.jpg" height="300px" class="center" alt="Logo Here"></a>
+			<h5 id="sin" style="text-align: center;">S  i  n  c  e   2  0  2  1  </h5>
 			<div id="fc">UWASE CHIRWA BAD'LHA BIOCHEMICAL LABORATORY</div> 
 		</div>
 		
-		<nav>  
-			<center><h3 id="cap">
+		<nav style="text-align: center;">  
+			<h3 id="cap">
 			<a id="lin" href="index.html">Home</a>
 			<a id="lin" href="aboutus.html">About me</a>
 			<a id="lin" href="products.html">Products</a>  
 			<a id="lin" href="gallery.html">Gallery</a>
 			<a id="lin" href="contact.html">Contact me</a>
-			</h3></center>
+			</h3>
 		</nav>
 		
 		<div class="title">
@@ -39,11 +47,11 @@
 		</div>
 		
 		
-		<nav><center>
-			<a href=""><img id="limg" src="images\insta.png" height="30px" width="30px" alt="insta logo here"></a>
-			<a href=""><img id="limg" src="images\fb.png" height="30px" width="30px" alt="facebook logo here"></a>
-			<a href=""><img id="limg" src="images\gmail.png" height="30px" width="30px" alt="gmail logo here"></a>
-		</nav></center>
+		<nav style="text-align: center;">
+			<a href=""><img id="limg" src="photo.jpg" height="30px" width="30px" alt="insta logo here"></a>
+			<a href=""><img id="limg" src="fb.png" height="30px" width="30px" alt="facebook logo here"></a>
+			<a href=""><img id="limg" src="gmail.png" height="30px" width="30px" alt="gmail logo here"></a>
+		</nav>
 		
 		<marquee class="marq">* For Calling : 10am-7pm everyday *</marquee>
 	</body>
